--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "vue": "3.2.36",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vue-router-mock": "^0.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
